--- a/不想努力的时候看一看吧.html
+++ b/不想努力的时候看一看吧.html
@@ -1014,7 +1014,44 @@ body .markdown-body
     page-break-after: avoid;
   }
 }
-</style><title>不想努力的时候看一看吧</title></head><body><article class="markdown-body"><h2 id="_1"><a name="user-content-_1" href="#_1" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a></h2>
-<ul>
-<li>初出茅庐，往往眼高手低，心高气傲，大事做不了，小事不愿做。不要养成挑三拣四的习惯。不要雨天烦打伞，不带伞又怕淋雨，处处表现出不满的情绪。记住，不做则已，要做就要做好。</li>
-</ul></article></body></html>
+</style><title>不想努力的时候看一看吧</title></head><body><article class="markdown-body"><h2 id="_1"><a name="user-content-_1" href="#_1" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>转载</h2>
+<p><code>买个闹钟，以便按时叫醒你</code></p>
+<blockquote>
+<p>贪睡和不守时，都将成为你工作和事业上的绊脚石，任何时候都一样。不仅要学会准时，更要学会提前。就如你坐车去某地，沿途的风景很美，你忍不住下车看一看，后来虽然你还是赶到了某地，却不是准时到达。“闹钟”只是一种简单的标志和提示，真正灵活、实用的时间，掌握在每个人的心中。  </p>
+</blockquote>
+<p><code>如果你不喜欢现在的工作，要么辞职不干，要么就闭嘴不言</code></p>
+<blockquote>
+<p>初出茅庐，往往眼高手低，心高气傲，大事做不了，小事不愿做。不要养成挑三拣四的习惯。不要雨天烦打伞，不带伞又怕淋雨，处处表现出不满的情绪。记住，不做则已，要做就要做好。</p>
+</blockquote>
+<p><code>每个人都有孤独的时候</code></p>
+<blockquote>
+<p>要学会忍受孤独，这样才会成熟起来。年轻人嘻嘻哈哈、打打闹闹惯了，到了一个陌生的环境，面对形形色色的人和事，一下子不知所措起来，有时连一个可以倾心说话的地方也没有。这时，千万别浮躁，学会静心，学会忍受孤独。在孤独中思考，在思考中成熟，在成熟中升华。不要因为寂寞而乱了方寸，而去做无聊无益的事情，白白浪费了宝贵的时间。  </p>
+</blockquote>
+<p><code>走运时要做好倒霉的准备</code></p>
+<blockquote>
+<p>有一天，一只狐狸走到一个葡萄园外，看见里面水灵灵的葡萄垂涎欲滴。可是外面有栅栏挡着，无法进去。于是它一狠心绝食三日，减肥之后，终于钻进葡萄园内饱餐一顿。当它心满意足地想离开葡萄园时，发觉自己吃得太饱，怎么也钻不出栅栏了。相信任何人都不愿做这样的狐狸。退路同样重要。饱带干粮，晴带雨伞，点滴积累，水到渠成。有的东西今天似乎一文不值，但有朝一日也许就会身价百倍。  </p>
+</blockquote>
+<p><code>不要像玻璃那样脆弱</code></p>
+<blockquote>
+<p>有的人眼睛总盯着自己，所以长不高看不远；总是喜欢怨天尤人，也使别人无比厌烦。没有苦中苦，哪来甜中甜？不要像玻璃那样脆弱，而应像水晶一样透明，太阳一样辉煌，腊梅一样坚强。既然睁开眼睛享受风的清凉，就不要埋怨风中细小的沙粒。  </p>
+</blockquote>
+<p><code>管住自己的嘴巴</code></p>
+<blockquote>
+<p>不要谈论自己，更不要议论别人。谈论自己往往会自大虚伪，在名不副实中失去自己。议论别人往往陷入鸡毛蒜皮的是非口舌中纠缠不清。每天下班后和你的那些同事朋友喝酒聊天可不是件好事，因为，这中间往往会把议论同事、朋友当做话题。背后议论人总是不好的，尤其是议论别人的短处，这些会降低你的人格。  </p>
+</blockquote>
+<p><code>机会从不会“失掉”，你失掉了，自有别人会得到</code></p>
+<blockquote>
+<p>不要凡事在天，守株待兔，更不要寄希望于“机会”。机会只不过是相对于充分准备而又善于创造机会的人而言的。也许，你正为失去一个机会而懊悔、埋怨的时候，机会正被你对面那个同样的“倒霉鬼”给抓住了。没有机会，就要创造机会，有了机会，就要巧妙地抓住。  </p>
+</blockquote>
+<p><code>若电话老是不响，你该打出去</code></p>
+<blockquote>
+<p>很多时候，电话会给你带来意想不到的收获，它不是花瓶，仅仅成为一种摆设。交了新朋友，别忘了老朋友，朋友多了路好走。交际的一大诀窍就是主动。好的人缘好的口碑，往往助你的事业更上一个台阶。  </p>
+</blockquote>
+<p><code>千万不要因为自己已经到了结婚年龄而草率结婚</code></p>
+<blockquote>
+<p>想结婚，就要找一个能和你心心相印、相辅相携的伴侣。不要因为放纵和游戏而恋爱，不要因为恋爱而影响工作和事业，更不要因一桩草率而失败的婚姻而使人生受阻。感情用事往往会因小失大。  </p>
+</blockquote>
+<p><code>写出你一生要做的事情，把单子放在皮夹里，经常拿出来看</code></p>
+<blockquote>
+<p>人生要有目标，要有计划，要有提醒，要有紧迫感。一个又一个小目标串起来，就成了你一生的大目标。生活富足了，环境改善了，不要忘了皮夹里那张看似薄薄的单子。</p>
+</blockquote></article></body></html>
