change add title other

--- a/不想努力的时候看一看吧.html
+++ b/不想努力的时候看一看吧.html
@@ -1014,7 +1014,7 @@ body .markdown-body
     page-break-after: avoid;
   }
 }
-</style><title>不想努力的时候看一看吧</title></head><body><article class="markdown-body"><h2 id="_1"><a name="user-content-_1" href="#_1" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>转载</h2>
+</style><title>不想努力的时候看一看吧</title></head><body><article class="markdown-body"><h2 id="_1"><a name="user-content-_1" href="#_1" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>转载    鸡汤啊 一碗一碗的  喝一喝清醒下就行了  |  千万不要喝醉了</h2>
 <ul>
 <li>
 <p>买个闹钟，以便按时叫醒你</p>
@@ -1076,4 +1076,11 @@ body .markdown-body
 <p>人生要有目标，要有计划，要有提醒，要有紧迫感。一个又一个小目标串起来，就成了你一生的大目标。生活富足了，环境改善了，不要忘了皮夹里那张看似薄薄的单子。</p>
 </blockquote>
 </li>
-</ul></article></body></html>
+</ul>
+<p>ps &mdash;  学会说服力，就开法拉利，学会说服力，马上买宾利，学会说服力，人生很得意，学会说服力，一切都顺利！</p>
+<blockquote>
+<p>团队就是有口才的人讲话给有耳朵的人听</p>
+<blockquote>
+<p>先花80%的时间创造20%的结果 &amp; 最后花20%的时间创造80%的结果</p>
+</blockquote>
+</blockquote></article></body></html>
